-added new system for moving C according to audio

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(FractalGen fractal_gen.cpp)
 add_library(AudioHandler audio_handler.cpp)
 add_library(ImageGen image_gen.cpp)
+add_library(ParametricLocation parametric_location.cpp)
