--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(AudioVisualiser LANGUAGES CXX)
+project(AudioVisualiserImageGen LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
 add_subdirectory(src)
 
 add_executable(AudioVisualiser main.cpp)
 target_link_libraries(AudioVisualiser ImageGen)
 target_link_libraries(AudioVisualiser FractalGen)
 target_link_libraries(AudioVisualiser AudioHandler)
+target_link_libraries(AudioVisualiser ParametricLocation)
 target_link_libraries(AudioVisualiser m pthread)
-#target_link_libraries(RayMarching GL glut GLEW glfw)
+
+#project(AudioVisualiserLivePreview LANGUAGES CXX)
+#configure_file(${CMAKE_SOURCE_DIR}/shdr.glsl ${CMAKE_BINARY_DIR}/shdr.glsl COPYONLY)
+#add_executable(AudioVisualiserLivePreview live_preview.cpp)
+#target_link_libraries(AudioVisualiserLivePreview sfml-graphics sfml-window sfml-system sfml-audio)
