--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(AudioVisualiserImageGen LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(src)
-
+add_compile_options("-g")
 add_executable(AudioVisualiser main.cpp)
 target_link_libraries(AudioVisualiser ImageGen)
 target_link_libraries(AudioVisualiser FractalGen)
